--- a/css/gitbook/normalize.css
+++ b/css/gitbook/normalize.css
@@ -2362,7 +2362,7 @@ table {
   font-weight: 200;
   text-align: center;
   line-height: 50px;
-  opacity: 0;
+  opacity: 0.5;
   padding-left: 200px;
   padding-right: 200px;
   -webkit-transition: opacity .2s ease;
@@ -2374,7 +2374,7 @@ table {
   white-space: nowrap
 }
 
-.book .book-header h1 a,
+.book .book-header h1 a, 
 .book .book-header h1 a:hover {
   color: inherit;
   text-decoration: none
@@ -2550,13 +2550,13 @@ table {
 
 .book .book-summary {
   position: absolute;
-  top: 0;
-  left: -300px;
+  top: 50px;
+  left: -250px;
   bottom: 0;
   z-index: 1;
-  width: 300px;
+  width: 250px;
   color: #364149;
-  background: #fafafa;
+  /* background: #fafafa; */
   border-right: 1px solid rgba(0, 0, 0, .07);
   -webkit-transition: left 250ms ease;
   -moz-transition: left 250ms ease;
@@ -2612,7 +2612,10 @@ table {
 .book .book-summary ul.summary li a,
 .book .book-summary ul.summary li span {
   display: block;
-  padding: 10px 15px;
+  padding-top: 20px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 25px;
   border-bottom: none;
   color: #364149;
   background: 0 0;
@@ -2726,7 +2729,7 @@ table {
 
 @media (min-width:600px) {
   .book.with-summary .book-body {
-    left: 300px
+    left: 250px
   }
 }
 
@@ -3039,12 +3042,12 @@ table {
   bottom: 0;
   margin: 0;
   max-width: 150px;
-  min-width: 90px;
+  min-width: 50px;
   display: flex;
   justify-content: center;
   align-content: center;
   flex-direction: column;
-  font-size: 40px;
+  font-size: 30px;
   color: #ccc;
   text-align: center;
   -webkit-transition: all 350ms ease;
