--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/* .author,
-.title {
-  display: none;
-} */
-
 p.caption {
   color: #777;
   margin-top: 10px;
@@ -16,4 +11,8 @@ pre {
 }
 pre code {
   white-space: inherit;
+}
+
+.small {
+  font-size: small;
 }
