--- a/css/images.css
+++ b/css/images.css
@@ -1,6 +1,12 @@
 img.right {
-  float:right; 
+  float: right;
   margin-left: 20px;
   margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+img.left {
+  float: left;
+  margin-right: 20px;
   margin-bottom: 10px;
 }
