--- a/css/gitbook/style.css
+++ b/css/gitbook/style.css
@@ -2909,19 +2909,20 @@ table {
 }
 
 .book .book-body .page-wrapper .page-inner section.normal h1 {
-  font-size: 4em
+  font-size: 3em;
+  border-bottom: 1px solid rgba(0, 0, 0, .07);
 }
 
 .book .book-body .page-wrapper .page-inner section.normal h2 {
-  font-size: 1.75em
+  /* font-size: 1.75em */
 }
 
 .book .book-body .page-wrapper .page-inner section.normal h3 {
-  font-size: 1.25em
+  /* font-size: 1.25em */
 }
 
 .book .book-body .page-wrapper .page-inner section.normal h4 {
-  font-size: 1.25em
+  /* font-size: 1.25em */
 }
 
 .book .book-body .page-wrapper .page-inner section.normal h5 {
