--- a/css/custom.css
+++ b/css/custom.css
@@ -36,11 +36,14 @@ figcaption {
   --table-header-bg: none;
 } */
 
-/* h1 {
-    margin: .67em 0;
+h1 {
+    margin-bottom: .67em;
+    margin-top: 1.275em;
     border-bottom: 1px solid rgba(0, 0, 0, .07);
     padding-bottom: 10px;
-} */
+    font-size: 3em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 thead {
   display: none;
@@ -56,5 +59,22 @@ thead {
 
 .content p {
   line-height: 2em;
-  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+.content li p {
+  line-height: 1.5em;
+  padding-top: 0px;
+}
+
+.content ul {
+  line-height: 2em;
+}
+
+.content td {
+  line-height: 2em;
+}
+
+.small {
+  font-size: small;
 }
