--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -4,7 +4,7 @@
 
 :root {
   /* Browser default font-size is 16px, this way 1 rem = 10px */
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
 }
 
 html {
@@ -16,7 +16,7 @@ html {
 
 body {
   margin: 0;
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
   overflow-x: hidden;
 }
 
