--- a/theme/css/tufte.css
+++ b/theme/css/tufte.css
@@ -125,10 +125,13 @@ h2 {
 }
 
 p,
-ol,
 dl,
 ul {
   font-size: 1.4em;
   margin-top: 1.3em;
   margin-bottom: 1.3em;
+}
+
+ol {
+  font-size: 20px;
 }
