--- a/theme/css/tufte.css
+++ b/theme/css/tufte.css
@@ -91,12 +91,6 @@ body {
   padding-right: 1em;
 }
 
-@media (max-width: 786px) {
-  body {
-    margin: 2em auto;
-  }
-}
-
 h1,
 h2 {
   font-weight: 400;
@@ -112,26 +106,17 @@ h1 {
   margin-bottom: 0.5em;
 }
 
-@media (max-width: 786px) {
-  h1 {
-    margin-top: 0;
-  }
-}
-
 h2 {
   font-style: italic;
   font-size: 2.3em;
   margin-top: 1.7em;
 }
 
-p,
-dl,
-ul {
+main > p,
+main > dl,
+main > ul,
+main > ol {
   font-size: 1.4em;
   margin-top: 1.3em;
   margin-bottom: 1.3em;
-}
-
-ol {
-  font-size: 20px;
 }
