--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -1,6 +1,7 @@
 /* Base styles and content styles */
 
 @import "variables.css";
+@import "fonts/et-book.css"; /* added individually: use 'et-book' fonts */
 
 :root {
   /* Browser default font-size is 16px, this way 1 rem = 10px */
@@ -8,7 +9,7 @@
 }
 
 html {
-  font-family: "Open Sans", sans-serif;
+  font-family: et-book;
   color: var(--fg);
   background-color: var(--bg);
   text-size-adjust: none;
@@ -125,9 +126,10 @@ h6:target::before {
 table {
   margin: 0 auto;
   border-collapse: collapse;
+  font-size: 1.4em;
 }
 table td {
-  padding: 3px 20px;
+  /* padding: 3px 20px; */
   border: 1px var(--table-border-color) solid;
 }
 table thead {
