--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -36,7 +36,7 @@
         <!-- Fonts -->
         <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/font-awesome.css">
         {{#if copy_fonts}}
-        <link rel="stylesheet" href="{{ path_to_root }}fonts/et-book.css">
+        <link rel="stylesheet" href="{{ path_to_root }}fonts/fonts.css">
         {{/if}}
 
         <!-- Highlight.js Stylesheets -->
