add css for links and h3

--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -106,7 +106,8 @@ h6:target::before {
   line-height: 1.45em;
 }
 .content a {
-  text-decoration: none;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
 }
 .content a:hover {
   text-decoration: underline;
