--- a/src/css/tufte.css
+++ b/src/css/tufte.css
@@ -35,25 +35,40 @@ body {
   padding-right: 1em;
 }
 
-h1,
-h2 {
-  font-weight: 400;
-  line-height: 1.2;
-  margin-top: 2em;
-  margin-bottom: 0;
-}
-
 h1 {
-  font-size: 3.2em;
+  font-weight: 400;
+  margin-top: 4rem;
+  margin-bottom: 1.5rem;
+  font-size: 3.2rem;
   line-height: 1;
-  margin-top: 2em;
-  margin-bottom: 0.5em;
 }
 
 h2 {
   font-style: italic;
-  font-size: 2.3em;
-  margin-top: 1.7em;
+  font-weight: 400;
+  margin-top: 2.1rem;
+  margin-bottom: 1.4rem;
+  font-size: 2.2rem;
+  line-height: 1;
+}
+
+h3 {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 1.7rem;
+  margin-top: 2rem;
+  margin-bottom: 1.4rem;
+  line-height: 1;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  width: 55%;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
 main > p,
@@ -63,4 +78,32 @@ main > ol {
   font-size: 1.4em;
   margin-top: 1.3em;
   margin-bottom: 1.3em;
+}
+
+figure {
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  max-width: 55%;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  margin: 0 0 3em 0;
+}
+
+figcaption {
+  float: right;
+  clear: right;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.1rem;
+  line-height: 1.6;
+  vertical-align: baseline;
+  position: relative;
+  max-width: 40%;
+}
+
+figure.fullwidth figcaption {
+  margin-right: 24%;
 }
