--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -144,6 +144,7 @@ h6:target::before {
   font-size: 1.4em;
   margin-top: 1.3em;
   margin-bottom: 1.3em;
+  list-style: none;
 }
 .content a {
   text-decoration: none;
