--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,18 @@ h1.title {
   color: inherit;
 }
 
-#math-notes img {
-}
-
 h2 {
   padding-top: 1em;
+}
+
+details[open] {
+  padding-bottom: 1em;
+}
+
+details[open] summary {
+  padding-bottom: 1em;
+}
+
+details[open] p:first-of-type {
+  text-align: center;
 }
